--- a/index.html
+++ b/index.html
@@ -1,191 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>UsabilityHub | User Research & Usability</title>
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UsabilityHub | User Research & Usability Testing Platform</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-
-<body>
+  <body>
     <div class="banner">
-        <a href=""><strong>New to Usability Hub: Open and closed card sorting!</strong> Read more &rarr;</a>
+      <a href=""
+        ><strong>New to Usability Hub: Open and closed card sorting!</strong>
+        Read more &rarr;</a
+      >
     </div>
     <div class="navbar">
-        <div class="logo">
-            <img src="/Main-head-images/logo.png" alt="">
-        </div>
-        <a class="tester" href="">Become a tester</a>
-        <ul>
-            <li><a href="">Product</a></li>
-            <li><a href="">Customers</a></li>
-            <li><a href="">Pricing</a></li>
-            <li><a href="">Resources</a></li>
-        </ul>
-        <div class="log">
-            <a class="signin" href="">Sign in</a>
-            <a class="signup" href="">Sign up</a>
-        </div>
+      <div class="logo">
+        <img src="/Main-head-images/logo.png" alt="" />
+      </div>
+      <a class="tester" href="">Become a tester</a>
+      <ul>
+        <li><a href="">Product</a></li>
+        <li><a href="">Customers</a></li>
+        <li><a href="">Pricing</a></li>
+        <li><a href="">Resources</a></li>
+      </ul>
+      <div class="log">
+        <a class="signin" href="">Sign in</a>
+        <a class="signup" href="">Sign up</a>
+      </div>
     </div>
     <div class="main-hero">
-        <div class="left-hero">
-            <h1>Design confidently.</h1>
-            <p>UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by
-                validating them with real users.</p>
-            <a class="getstart" href="">Get Started</a>
-        </div>
-        <div class="hero-img">
-            <img src="/Main-head-images/hero-image.png" alt="">
-        </div>
+      <div class="left-hero">
+        <h1>Design confidently.</h1>
+        <p>
+          UsabilityHub is a remote user research platform that takes the
+          guesswork out of design decisions by validating them with real users.
+        </p>
+        <a class="getstart" href="">Get Started</a>
+      </div>
+      <div class="hero-img">
+        <img src="/Main-head-images/hero-image.png" alt="" />
+      </div>
     </div>
-    <p class="client-para">The world’s best companies rely on UsabilityHub to make better design decisions.</p>
+    <p class="client-para">
+      The world’s best companies rely on UsabilityHub to make better design
+      decisions.
+    </p>
     <div class="client-section">
-        <img src="/companies-images/amazon.png" alt="">
-        <img src="/companies-images/google.png" alt="">
-        <img src="/companies-images/taskrabbit.png" alt="">
-        <img src="/companies-images/airtable.png" alt="">
-        <img src="/companies-images/box.png" alt="">
-        <img class="godaddy" src="/companies-images/godaddy.svg" alt="">
-        <img src="/companies-images/asana.png" alt="">
+      <img src="/companies-images/amazon.png" alt="" />
+      <img src="/companies-images/google.png" alt="" />
+      <img src="/companies-images/taskrabbit.png" alt="" />
+      <img src="/companies-images/airtable.png" alt="" />
+      <img src="/companies-images/box.png" alt="" />
+      <img class="godaddy" src="/companies-images/godaddy.svg" alt="" />
+      <img src="/companies-images/asana.png" alt="" />
     </div>
     <div class="swiss-section">
-        <div class="swiss-top">
-            <h1>Your user research Swiss Army knife</h1>
-            <a href="">See all features <span class="arrow-entity"> &rarr;</span></a>
+      <div class="swiss-top">
+        <h1>Your user research Swiss Army knife</h1>
+        <a href=""
+          >See all features <span class="arrow-entity"> &rarr;</span></a
+        >
+      </div>
+      <div class="swiss-bottom">
+        <div class="card">
+          <img src="/first-section-images/card.svg" alt="" />
+          <h4>Card sorting</h4>
+          <p>Discover how people group and label information.</p>
+          <a href="">Learn more <span class="arrow-entity"> &rarr;</span></a>
         </div>
-        <div class="swiss-bottom">
-            <div class="card">
-                <img src="/first-section-images/card.svg" alt="">
-                <h4>Card sorting</h4>
-                <p>Discover how people group and label information.</p>
-                <a href="">Learn more <span class="arrow-entity"> &rarr;</span></a>
-            </div>
-            <div class="card">
-                <img src="/first-section-images/prototypes.svg" alt="">
-                <h4>Prototype tests</h4>
-                <p>Discover how people navigate your Figma prototypes.</p>
-                <a href="">Learn more <span class="arrow-entity"> &rarr;</span></a>
-            </div>
-            <div class="card">
-                <img src="/first-section-images/firstclick.svg" alt="">
-                <h4>First click tests</h4>
-                <p>Test interaction with first click and navigation tests.</p>
-                <a href="">Learn more <span class="arrow-entity"> &rarr;</span></a>
-            </div>
-            <div class="card">
-                <img src="/first-section-images/design.svg" alt="">
-                <h4>Design surveys
-                </h4>
-                <p>Get feedback on images, videos or audio files.
-                </p>
-                <a href="">Learn more <span class="arrow-entity"> &rarr;</span></a>
-            </div>
-            <div class="card">
-                <img src="/first-section-images/preference.svg" alt="">
-                <h4>Preference tests</h4>
-                <p>Find out which designs users prefer and why.</p>
-                <a href="">Learn more <span class="arrow-entity"> &rarr;</span></a>
-            </div>
-            <div class="card">
-                <img src="/first-section-images/fivesecond.svg" alt="">
-                <h4>Five second tests</h4>
-                <p>Test comprehensibility by measuring first impressions.</p>
-                <a href="">Learn more <span class="arrow-entity"> &rarr;</span></a>
-            </div>
+        <div class="card">
+          <img src="/first-section-images/prototypes.svg" alt="" />
+          <h4>Prototype tests</h4>
+          <p>Discover how people navigate your Figma prototypes.</p>
+          <a href="">Learn more <span class="arrow-entity"> &rarr;</span></a>
         </div>
+        <div class="card">
+          <img src="/first-section-images/firstclick.svg" alt="" />
+          <h4>First click tests</h4>
+          <p>Test interaction with first click and navigation tests.</p>
+          <a href="">Learn more <span class="arrow-entity"> &rarr;</span></a>
+        </div>
+        <div class="card">
+          <img src="/first-section-images/design.svg" alt="" />
+          <h4>Design surveys</h4>
+          <p>Get feedback on images, videos or audio files.</p>
+          <a href="">Learn more <span class="arrow-entity"> &rarr;</span></a>
+        </div>
+        <div class="card">
+          <img src="/first-section-images/preference.svg" alt="" />
+          <h4>Preference tests</h4>
+          <p>Find out which designs users prefer and why.</p>
+          <a href="">Learn more <span class="arrow-entity"> &rarr;</span></a>
+        </div>
+        <div class="card">
+          <img src="/first-section-images/fivesecond.svg" alt="" />
+          <h4>Five second tests</h4>
+          <p>Test comprehensibility by measuring first impressions.</p>
+          <a href="">Learn more <span class="arrow-entity"> &rarr;</span></a>
+        </div>
+      </div>
     </div>
     <div class="three-sections">
-        <div class="sections">
-            <img class="side-img" src="/first-section-images/side-img.png" alt="">
-            <div class="section-inside">
-                <h5>Effortless validation for</h5>
-                <h1>Design professionals</h1>
-                <p class="section-para">Test interfaces, interaction flows, iconography and more, to help you create
-                    intuitive and delightful
-                    experiences for your users.</p>
-                <img class="section-logo" src="/first-section-images/chartmogul.png" alt="">
-                <h5>The navigation test is god's gift to UI designers, it probably has the best power-to-simplicity
-                    ratio of any software, ever.</h5>
-                <img class="reviewer-img" src="/first-section-images/reviewer-nick.png" alt="">
-                <div class="reviewer">
-                    <h5>Nick Franklin</h5>
-                    <p>Chief Executive Officer</p>
-                </div>
-            </div>
+      <div class="sections">
+        <img class="side-img" src="/first-section-images/side-img.png" alt="" />
+        <div class="section-inside">
+          <h5>Effortless validation for</h5>
+          <h1>Design professionals</h1>
+          <p class="section-para">
+            Test interfaces, interaction flows, iconography and more, to help
+            you create intuitive and delightful experiences for your users.
+          </p>
+          <img
+            class="section-logo"
+            src="/first-section-images/chartmogul.png"
+            alt=""
+          />
+          <h5>
+            The navigation test is god's gift to UI designers, it probably has
+            the best power-to-simplicity ratio of any software, ever.
+          </h5>
+          <img
+            class="reviewer-img"
+            src="/first-section-images/reviewer-nick.png"
+            alt=""
+          />
+          <div class="reviewer">
+            <h5>Nick Franklin</h5>
+            <p>Chief Executive Officer</p>
+          </div>
         </div>
-        <div class="sections">
-            <div class="section-inside">
-                <h5>Optimisation for</h5>
-                <h1>Marketers</h1>
-                <p class="section-para">Fine-tune landing pages, messaging, and creative, helping you optimise
-                    conversion rates on marketing campaigns and product launches.</p>
-                <img class="section-logo" src="/first-section-images/philips.png" alt="">
-                <h5>We use UsabilityHub tests to help us make decisions for various projects. From web and mobile design
-                    to marketing activities.</h5>
-                <img class="reviewer-img" src="/first-section-images/rick.png" alt="">
-                <div class="reviewer">
-                    <h5>Digital Marketing Analyst</h5>
-                    <p>Digital Marketing Analyst</p>
-                </div>
-            </div>
-            <img class="side-img" src="/first-section-images/side-img2.png" alt="">
+      </div>
+      <div class="sections">
+        <div class="section-inside">
+          <h5>Optimisation for</h5>
+          <h1>Marketers</h1>
+          <p class="section-para">
+            Fine-tune landing pages, messaging, and creative, helping you
+            optimise conversion rates on marketing campaigns and product
+            launches.
+          </p>
+          <img
+            class="section-logo"
+            src="/first-section-images/philips.png"
+            alt=""
+          />
+          <h5>
+            We use UsabilityHub tests to help us make decisions for various
+            projects. From web and mobile design to marketing activities.
+          </h5>
+          <img
+            class="reviewer-img"
+            src="/first-section-images/rick.png"
+            alt=""
+          />
+          <div class="reviewer">
+            <h5>Digital Marketing Analyst</h5>
+            <p>Digital Marketing Analyst</p>
+          </div>
         </div>
-        <div class="sections">
-            <img class="side-img" src="/first-section-images/side-img3.png" alt="">
-            <div class="section-inside">
-                <h5>Easier decision making for</h5>
-                <h1>Product managers</h1>
-                <p class="section-para">Ensure you’re delivering the right features to the right customers by validating
-                    product concepts with your target audience.</p>
-                <img class="section-logo" src="/first-section-images/economist.png" alt="">
-                <h5>Adopting UsabilityHub got us into the habit of asking our users questions before locking in
-                    decisions.</h5>
-                <img class="reviewer-img" src="/first-section-images/ron.png" alt="">
-                <div class="reviewer">
-                    <h5>Ron Diorio
-                    </h5>
-                    <p>VP Innovation & New Products</p>
-                </div>
-            </div>
+        <img
+          class="side-img"
+          src="/first-section-images/side-img2.png"
+          alt=""
+        />
+      </div>
+      <div class="sections">
+        <img
+          class="side-img"
+          src="/first-section-images/side-img3.png"
+          alt=""
+        />
+        <div class="section-inside">
+          <h5>Easier decision making for</h5>
+          <h1>Product managers</h1>
+          <p class="section-para">
+            Ensure you’re delivering the right features to the right customers
+            by validating product concepts with your target audience.
+          </p>
+          <img
+            class="section-logo"
+            src="/first-section-images/economist.png"
+            alt=""
+          />
+          <h5>
+            Adopting UsabilityHub got us into the habit of asking our users
+            questions before locking in decisions.
+          </h5>
+          <img
+            class="reviewer-img"
+            src="/first-section-images/ron.png"
+            alt=""
+          />
+          <div class="reviewer">
+            <h5>Ron Diorio</h5>
+            <p>VP Innovation & New Products</p>
+          </div>
         </div>
+      </div>
     </div>
     <footer>
-        <img class="foot-align" src="/Main-head-images/logo.png" alt="">
-        <div class="line-one-foot foot-align">
-
-            <h5>Product</h5>
-            <ul>
-                <li><a href="">Owerview</a></li>
-                <li><a href="">Pricing</a></li>
-                <li><a href="">UsabilityHub panel</a></li>
-                <li><a href="">Customers</a></li>
-                <li><a href="">Status page</a></li>
-            </ul>
-        </div>
-        <div class="line-two-foot foot-align">
-            <h5>Methodologies</h5>
-            <ul>
-                <li><a href="">Card sorting</a></li>
-                <li><a href="">First click tests</a></li>
-                <li><a href="">Preference tests</a></li>
-                <li><a href="">Five second tests</a></li>
-                <li><a href="">Design surveys</a></li>
-            </ul>
-        </div>
-        <div class="line-three-foot foot-align">
-            <h5>Resources</h5>
-            <ul>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Examples</a></li>
-                <li><a href="">Testing guides</a></li>
-                <li><a href="">Help Center</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Careers</a></li>
-            </ul>
-        </div>
+      <img class="foot-align" src="/Main-head-images/logo.png" alt="" />
+      <div class="line-one-foot foot-align">
+        <h5>Product</h5>
+        <ul>
+          <li><a href="">Owerview</a></li>
+          <li><a href="">Pricing</a></li>
+          <li><a href="">UsabilityHub panel</a></li>
+          <li><a href="">Customers</a></li>
+          <li><a href="">Status page</a></li>
+        </ul>
+      </div>
+      <div class="line-two-foot foot-align">
+        <h5>Methodologies</h5>
+        <ul>
+          <li><a href="">Card sorting</a></li>
+          <li><a href="">First click tests</a></li>
+          <li><a href="">Preference tests</a></li>
+          <li><a href="">Five second tests</a></li>
+          <li><a href="">Design surveys</a></li>
+        </ul>
+      </div>
+      <div class="line-three-foot foot-align">
+        <h5>Resources</h5>
+        <ul>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Examples</a></li>
+          <li><a href="">Testing guides</a></li>
+          <li><a href="">Help Center</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Careers</a></li>
+        </ul>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
